2/requirements/app_03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  namespace: default
  labels:
    app.kubernetes.io/name: hello-kubernetes-3
    app.kubernetes.io/instance: app3-deployment
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: app3
    app.kubernetes.io/part-of: part-2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-kubernetes-3
      app.kubernetes.io/instance: app3-deployment
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/component: app3
      app.kubernetes.io/part-of: part-2
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-kubernetes-3
        app.kubernetes.io/instance: app3-deployment
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/component: app3
        app.kubernetes.io/part-of: part-2
    spec:
      containers:
      - name: app3-deployment
        image: paulbouwer/hello-kubernetes:1.10.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort: 8080
          name: app3-port
      restartPolicy: Always
